--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "Ahmad Arif <ahmad.arif019@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "swagger-ui-dist": "latest",
     "swagger-jsdoc": "^6.0.0"
   },
   "repository": {
